--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ h1 {
   text-align: center;
   color: black;
   text-shadow: -2px 2px wheat;
+  margin-bottom: 10px;
 }
 
 h3 {
@@ -52,7 +53,8 @@ input, select {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
-  width: 100%;
+  width: 85%;
+  margin-top: 10px;
 }
 
 button {
@@ -64,7 +66,7 @@ button {
   cursor: pointer;
   border-radius: 5px;
   transition: background 0.3s;
-  width: 100%;
+  width: 95%;
   margin-top: 10px;
 }
 
@@ -78,25 +80,64 @@ button:hover {
   justify-content: space-around;
   margin: 15px 0;
 }
-
-.opcion {
-  text-align: center;
+@media (max-width: 450px) {
+  .opciones {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
 
 .opcion img {
-  border: 3px solid white;
+  border: 5px solid white;
   border-radius: 5px;
   width: 220px;
   height: 180px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  cursor: pointer;
+  transition: border 0.3s ease;
+}
+.opcion img.seleccionado {
+  border-color: red;
 }
 
 .opcion label {
   display: block;
   font-weight: bold;
   margin-top: 5px;
+}
+
+.mensaje-emergente {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  text-align: center;
+}
+.mensaje-emergente #mensajeTexto {
+  margin: 10px 0;
+  font-size: 18px;
+}
+.mensaje-emergente button {
+  padding: 10px 20px;
+  background-color: red;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.mensaje-emergente button:hover {
+  background-color: darkred;
 }
 
 /*# sourceMappingURL=styles.css.map */
