--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +12,12 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 20px 0;
+}
+
+.recupero {
+  margin-top: 15px;
 }
 
 .contenedor {
@@ -41,6 +45,7 @@ h3 {
 form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
 }
 
@@ -55,6 +60,7 @@ input, select {
   font-size: 16px;
   width: 85%;
   margin-top: 10px;
+  text-transform: capitalize;
 }
 
 button {
@@ -66,15 +72,13 @@ button {
   cursor: pointer;
   border-radius: 5px;
   transition: background 0.3s;
-  width: 95%;
+  width: 90%;
   margin-top: 10px;
 }
-
 button:hover {
   background: darkgoldenrod;
 }
 
-/* Opciones de vehículos */
 .opciones {
   display: flex;
   justify-content: space-around;
@@ -102,7 +106,6 @@ button:hover {
 .opcion img.seleccionado {
   border-color: red;
 }
-
 .opcion label {
   display: block;
   font-weight: bold;
@@ -140,20 +143,13 @@ button:hover {
   background-color: darkred;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-input, select {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .info-usuario {
   background-color: #f0e6d2;
   padding: 10px;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
   border-radius: 8px;
   text-align: center;
   margin-bottom: 15px;
@@ -164,7 +160,6 @@ input, select {
   font-weight: bold;
 }
 
-/* Centrar título "Consumo en amperes" */
 .consumo-label {
   display: flex;
   flex-direction: column;
@@ -173,21 +168,30 @@ input, select {
   margin-bottom: 5px;
 }
 
-/* Cuadro blanco para dispositivos agregados */
 .dispositivos-agregados {
-  width: 100%;
-  margin-top: 10px; /* Para centrarlo horizontalmente */
+  width: 85%;
+  max-width: 500px;
+  margin: 10px auto;
   background-color: white;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   text-align: center;
+  max-height: 250px;
+  overflow-y: auto;
 }
 
-/* Botones en la misma línea */
+.dispositivos-agregados .item:nth-child(even) {
+  background-color: rgba(51, 51, 51, 0.3764705882);
+}
+
+.dispositivos-agregados .item:nth-child(odd) {
+  background-color: rgba(136, 136, 136, 0.3764705882);
+}
+
 .botones-container {
   display: flex;
-  width: 100%;
+  width: 90%;
   justify-content: space-between;
   margin-top: 15px;
   gap: 5px;
@@ -195,6 +199,18 @@ input, select {
 
 .saveExp {
   text-align: center;
+}
+
+.lista {
+  width: 100%;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 12px;
+  border-bottom: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=styles.css.map */
