--- a/scss/pages/_inicio.scss
+++ b/scss/pages/_inicio.scss
@@ -7,7 +7,12 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;      
+    padding: 20px 0;
+}
+
+.recupero{
+margin-top: 15px;
 }
 
 .contenedor {
@@ -35,13 +40,13 @@ h3 {
 form {
     display: flex;
     flex-direction: column;
-    gap: 10px; 
+    align-items: center;
+    gap: 10px;
 }
 
 label {
     font-weight: bold;
 }
-
 
 input, select {
     padding: 8px;
@@ -50,9 +55,8 @@ input, select {
     font-size: 16px;
     width: 85%;
     margin-top: 10px;
-
+    text-transform: capitalize;
 }
-
 
 button {
     padding: 10px;
@@ -63,16 +67,14 @@ button {
     cursor: pointer;
     border-radius: 5px;
     transition: background 0.3s;
-    width: 95%;
+    width: 90%;
     margin-top: 10px;
+    
+    &:hover {
+        background: darkgoldenrod;
+    }
 }
 
-button:hover {
-    background: darkgoldenrod;
-}
-
-
-/* Opciones de vehículos */
 .opciones {
     display: flex;
     justify-content: space-around;
@@ -85,28 +87,29 @@ button:hover {
     }
 }
 
-.opcion img {
-    border: 5px solid white;
-    border-radius: 5px;
-    width: 220px;
-    height: 180px;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    cursor: pointer;
-    transition: border 0.3s ease;
-    
-    &.seleccionado {
-        border-color: red;
+.opcion {
+    img {
+        border: 5px solid white;
+        border-radius: 5px;
+        width: 220px;
+        height: 180px;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        cursor: pointer;
+        transition: border 0.3s ease;
+
+        &.seleccionado {
+            border-color: red;
+        }
+    }
+
+    label {
+        display: block;
+        font-weight: bold;
+        margin-top: 5px;
     }
 }
-
-.opcion label {
-    display: block;
-    font-weight: bold;
-    margin-top: 5px;
-}
-
 
 .mensaje-emergente {
     display: none; 
@@ -121,12 +124,12 @@ button:hover {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
     z-index: 9999;
     text-align: center;
-    
+
     #mensajeTexto {
         margin: 10px 0;
         font-size: 18px;
     }
-    
+
     button {
         padding: 10px 20px;
         background-color: red;
@@ -136,26 +139,20 @@ button:hover {
         cursor: pointer;
         border-radius: 5px;
         
+
         &:hover {
             background-color: darkred;
         }
     }
 }
 
-form {
+.info-usuario {
+    background-color: #f0e6d2;
+    padding: 10px;
+    width: 85%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-input, select {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.info-usuario {
-    background-color: #f0e6d2; // Fondo beige
-    padding: 10px;
+    justify-self: center;
     border-radius: 8px;
     text-align: center;
     margin-bottom: 15px;
@@ -166,7 +163,6 @@ input, select {
     font-weight: bold;
 }
 
-/* Centrar título "Consumo en amperes" */
 .consumo-label {
     display: flex;
     flex-direction: column;
@@ -175,26 +171,47 @@ input, select {
     margin-bottom: 5px;
 }
 
-/* Cuadro blanco para dispositivos agregados */
 .dispositivos-agregados {
-    width: 100%;
-    margin-top: 10px; /* Para centrarlo horizontalmente */
+    width: 85%;
+    max-width: 500px;
+    margin: 10px auto;
     background-color: white;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     text-align: center;
-  }
-  
-/* Botones en la misma línea */
+    max-height: 250px;
+    overflow-y: auto
+}
+.dispositivos-agregados .item:nth-child(even) {
+    background-color: #33333360;
+}
+
+.dispositivos-agregados .item:nth-child(odd) {
+    background-color: #88888860;
+}
+
+
 .botones-container {
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: space-between;
     margin-top: 15px;
     gap: 5px;
 }
 
 .saveExp {
- text-align: center;
+    text-align: center;
+}
+
+.lista{
+    width: 100%;
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 12px;
+    border-bottom: 1px solid #ccc;
+    border-radius: 5px;
 }
